...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnStartAll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/refresh_btn_style"
            android:text="@string/avvia_tutti"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnStopAll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/refresh_btn_style"
            android:text="@string/ferma_tutti"
            android:textColor="@color/white" />
...
