<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2020 VarTmp7
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>
    <string name="app_name">Stalker</string>
    <string name="stalker">Stalker</string>

    <string name="sign_in">Accedi</string>
    <string name="sign_up">Registrati</string>
    <string name="nessun_organizzazione_ti_sta_stalkerando">Nessun\'organizzazione ti sta stalkerando!</string>
    <string name="elenco_luoghi">Elenco Luoghi:</string>
    <string name="password">Password</string>
    <string name="annulla">Annulla</string>
    <string name="stop">Stop</string>
    <string name="conferma">Conferma</string>
    <string name="facebook_app_id">212692166599390</string><!--todo configurazione login facebook 6.2:  Da togliere successivamente quando renderemo l'app pubblica   -->
    <string name="fb_login_protocol_scheme">fb212692166599390</string>
    <string name="continua_senza_autenticazione">Continua senza autenticazione</string>
    <string name="title_home">Home</string>
    <string name="cronologia">Cronologia</string>
    <string name="preferiti">Preferiti</string>
    <string name="organizzazioni">Organizzazioni</string>
    <string name="track_me">Tracciami</string>
    <string name="login_ldap">Login LDAP</string>
    <string name="anonimo_question">Anonimo</string>
    <string name="indirizzo">Indirizzo:</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="icon_dell_organizzazione">icon dell\'organization</string>
    <string name="tipo_organizzazione">Tipo Organizzazione: </string>
    <string name="n_d">N.D.</string>
    <string name="nessun_luogo_tracciabile_per_quest_organizzazione">Nessun luogo tracciabile per quest\'organizzazione</string>
    <string name="organizzazione_added_to_favorite">Organizzazione aggiunta ai preferiti!</string>
    <string name="organizzazione_removed_from_favorite">Organizzazione rimosso dai preferiti</string>
    <string name="tracking_terminated">Tracciamento terminato!</string>
    <string name="initializing_tracking">Inizializzazione del tracciamento!</string>
    <string name="non_presente_nei_luoghi_tracciati">Non sei presente nei luoghi delle organizzazioni che ti stanno tracciando!</string>
    <string name="i_tuoi_preferiti">I tuoi preferiti:</string>
    <string name="should_be_logged_for_favorites">Non hai effettuato accesso, non puoi avere delle organizzazioni preferite, per farlo fai accesso.</string>
    <string name="not_logged_yet">Non hai fatto Login!</string>
    <string name="reset">Reset</string>
    <string name="registrami">Registrami</string>
    <string name="accedi">Accedi</string>
    <string name="ripeti_password">Ripeti password</string>
    <string name="password_dimenticata">Password \ndimenticata</string>
    <string name="inserire_indirizzo_mail">Dovresti inserire l\'indirizzo mail!</string>
    <string name="mail_inviata_con_successo">La mail è stata inviata con successo!</string>
    <string name="qualcosa_non_e_andato_bene">Qualcosa è andato storto!\nRiprovare più tardi!</string>
    <string name="password_non_coincidono">Password non coincidono!</string>
    <string name="password_troppo_corta">Password troppo corta!</string>
    <string name="modificato_con_successo">%s modificato con successo!</string>
    <string name="modifica_di_fallito">La modifica di %s fallito!</string>
    <string name="mail_di_verifica_inviata">Ti abbiamo mandato una mail di verifica dell\'indirizzo!</string>
    <string name="modifica_dati">Modifica Dati</string>
    <string name="account_esistente_con_questa_mail">Esiste già un account con questa mail!</string>
    <string name="unknown_error">Errori sconosciuti, riprova più tardi</string>
    <string name="luogo_cambiato">Luogo cambiato: %1$s</string>
    <string name="sei_in_tale_dei_tali">Sei in %s di \"%s\"!</string>
    <string name="ok">OK</string>
    <string name="app_necessita_di_permessi">Ho bisogno dei permessi per funzionare!</string>
    <string name="permission_denied_explanation">Applicazione ha bisogno dei permessi!</string>
    <string name="settings">Impostazione</string>
    <string name="ferma_tutti">Ferma \nTutti</string>
    <string name="avvia_tutti">Avvia\n tutti</string>
    <string name="tuo_cn">Tuo CN</string>
    <string name="nome_organizzazione">Nome:</string>
    <string name="numero_telefonico">Numero telefonico:</string>
    <string name="informazione_di_ldap">Informazione LDAP</string>
    <string name="icona_dell_organizzazione">Icona dell\'organizzazione</string>
    <string name="template_indirizzo" formatted="false">via: "%s , %s, CAP: %s, %s, %s.</string>
    <string name="template_ldap" formatted="false">url: \"%s\", port: %d, dn: \"%s\", cn: \"%s\".</string>
    <string name="chiudi">Chiudi</string>
    <string name="elenco_delle_organizzazioni_disponibili">Elenco delle organizzazioni disponibili:</string>
    <string name="recupero_password">Recupero password</string>
    <string name="ask_mail_for_recupero_password">Inserisci la mail con la quale ti sei registrato/a all\'applicazione!</string>
    <string name="inserisci_le_credenziali_ldap">Inserisci le tue credenziali LDAP</string>
    <string name="successfully_logout">Successufully logout</string>
    <string name="icona_che_rappresenta_ingresso_o_uscita">Icona che rappresenta ingresso o uscita</string>
    <string name="storico_tracciamenti">Storico degli tracciamenti:</string>
    <string name="devi_loggare_con_ldap">Devi prima effetturare login LDAP in un\'organizzazione!</string>
    <string name="non_ci_sono_tracciamenti">Non ci sono tracciamenti per le organizzazioni in cui hai effettuato login LDAP</string>
    <string name="apri_app">Apri applicazione</string>
    <string name="organizzazione_rimossa">Organizzazione rimossa!</string>
    <string name="tempo_trascorso">Tempo Trascorso</string>
    <string name="attenzione">Attenzione</string>
    <string name="devi_attivare_gps">Il sistema Stalker per funzionare correttamente ha bisogno di attivare il GPS!</string>
    <string name="devi_attivare_connessione">Il dispositivo per poter comunicare col server deve avere almeno la connessione dati attiva! </string>
    <string name="esci">Esci</string>
    <string name="organizazzioni_private_no_loogato">Ci sono delle organizzazioni private presso cui non hai fatto login!</string>
    <string name="segnala_bug">Segnalazione bug</string>
    <string name="descrizione_bug">Descrizione bug: </string>
    <string name="mail_gruppo">vartmp7@gmail.com</string>
    <string name="choose_mail_client">Scegli una app di email:</string>
    <string name="stato_attuale">Stato attuale</string>
    <string name="devi_loggarti">Devi devi effettuare il login!</string>
    <string name="verifica_mail">Verifica la mail!</string>
    <string name="confermare_registrazione">Vuoi confermare la registrazione?</string>
    <string name="logged">Login avvenuto con successo</string>
    <string name="ldap_login_failed_check_credentials">Login LDAP fallito!\nVerifica il password.</string>
    <string name="connection_to_ldap_failed">Connessione al  server LDAP fallita.</string>
    <string name="something_went_wrong">Qualcosa è andato storto. Riprovare più tardi.</string>
    <string name="rimuovi_filtro">Rimuovi filtro</string>
    <string name="non_hai_ancora_org_fav">Non hai ancora nessun\'organizzazione preferita!</string>
    <string name="vai_al_manuale">Vai al manuale</string>
    <string name="intro_title_1">Selezione organizzazione</string>
    <string name="intro_desc_1">Puoi selezionare l\'organizzazione da cui farti tracciare cliccando sull\'icona indicata dalla freccia o fare lo swipe da sinistra verso destra</string>
    <string name="intro_title_2">Tracciamenti</string>
    <string name="intro_desc_2">In ordine indicano: dove sei, da quanto tempo sei lì, mentre C, D, E sono rispettivamente organizzazioni di tipo privata-pubblica, privata e pubblica.</string>
    <string name="intro_desc_3">Un\'organizzazione preferita nella schermata dei tracciamenti e, nella parte inferiore, schermata delle organizzazioni preferite</string>
    <string name="intro_title_3">Preferiti</string>
    <string name="intro_title_4">Storico tracciamenti</string>
    <string name="intro_desc_4">Le lettere indicano rispettivamente: il filtro applicato per visualizzare i tracciamenti di un solo luogo, un tracciamento in uscita e un tracciamento in entrata.</string>
</resources>
